--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -26,8 +26,8 @@
       <a class="navbar-brand" href="/">Start Bootstrap</a>
       </ul>
       <ul class="navbar-right">
-      <a class="navbar-brand" href="/find"></span>Find Parking</a>
-      <a class="navbar-brand" href="/owner"></span>Post Parking</a>
+        <a class="navbar-brand" href="/find"></span>Find Parking</a>
+        <a class="navbar-brand" href="/owner"></span>Post Parking</a>
       <a class="btn btn-primary" href="#"></span>Sign In</a>
       </ul>
   </nav>
@@ -41,16 +41,32 @@
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
-              <br>
-              <br>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="text" class="form-control form-control-lg" placeholder="Enter a city, address or Zip Code">
-              </div>
-              <div class="col-12 col-md-2">
-                <button type="submit" class="btn btn-block btn-lg btn-primary"><i class="fa fa-search" style="font-size:24px"></i></button>
-                <br>
-              </div>
+            <div id="home">
+              <div class="container">
+                <div class="row">
+                  <div class="col-8 offset-2">
+                    <form class="clearfix mb-4" action="POST">
+                      <div class="form-group">
+                        <label for="example-text">Address</label>
+                        <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+                      </div>
+                      <div class="form-group">
+                        <label for="example-description">Example Description</label>
+                        <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
+                      </div>
+                      <button id="submit" class="btn btn-primary float-right">Submit</button>
+                    </form>
+                    <h3>Examples:</h3>
+                    <ul id="example-list" class="list-group">
+                      {{#each examples}}
+                      <li data-id="{{this.id}}" class="list-group-item">
+                        <a href="example/{{this.id}}">{{this.text}}</a>
+                        <button class="btn btn-danger float-right delete">ｘ</button>
+                      </li>
+                      {{/each}}
+                    </ul>
+                  </div>
+                </div>
               </div>
             </div>
           </form>
