--- a/views/example.handlebars
+++ b/views/example.handlebars
@@ -8,9 +8,9 @@
             <strong>ID</strong>: {{example.id}}</p>
           <p>
           <p>
-            <strong>Text</strong>: {{example.text}}</p>
+            <strong>Address</strong>: {{example.Address}}</p>
           <p>
-            <strong>Description:</strong> {{example.description}}</p>
+            <strong>Name:</strong> {{example.Name}}</p>
             <a href="/">← Back To Home</a>
         </div>
       </div>
