--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -37,7 +37,7 @@
       <div id= "Row_1" class="row">
          <div class="col-l- mx-auto">
            <br>
-            <h1 id="find" class="mb-3">Find your perfect parking space</h1>
+            <h1 id="find" class="mb-3">Post your perfect parking space</h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
@@ -47,24 +47,30 @@
                   <div class="col-8 offset-2">
                     <form class="clearfix mb-4" action="POST">
                       <div class="form-group">
-                        <label for="example-text">Address</label>
-                        <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+                        <label for="owner-Name">Name</label>
+                        <input type="text" id="owner-Name" class="form-control" aria-describedby="owner-Name" placeholder="Enter Your Name">
                       </div>
                       <div class="form-group">
-                        <label for="example-description">Example Description</label>
-                        <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
+                        <label for="owner-Address">Address</label>
+                        <input type="text" id="owner-Address" class="form-control" aria-describedby="owner-Address" placeholder="Enter Address">
                       </div>
+                      <div class="form-group">
+                        <label for="owner-Price">Price</label>
+                        <input type="text" id="owner-Price" class="form-control" aria-describedby="owner-Price" placeholder="Enter Monthly Price">
+                      </div>
+
+
                       <button id="submit" class="btn btn-primary float-right">Submit</button>
                     </form>
-                    <h3>Examples:</h3>
-                    <ul id="example-list" class="list-group">
-                      {{#each examples}}
-                      <li data-id="{{this.id}}" class="list-group-item">
-                        <a href="example/{{this.id}}">{{this.text}}</a>
+                    <!-- <h3>Owners:</h3>
+                    <ul id="owner-list" class="list-group">
+                      {{#each owners}}
+                      <li data-id="{{this.ID}}" class="list-group-item">
+                        <a href="owner/{{this.ID}}">{{this.Address}}</a>
                         <button class="btn btn-danger float-right delete">ｘ</button>
                       </li>
                       {{/each}}
-                    </ul>
+                    </ul> -->
                   </div>
                 </div>
               </div>
