--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -55,6 +55,10 @@
                         <input type="text" id="owner-Address" class="form-control" aria-describedby="owner-Address" placeholder="Enter Address">
                       </div>
                       <div class="form-group">
+                        <label for="owner-Description">Description</label>
+                        <textarea rows="3" id="owner-Description" class="form-control" aria-describedby="owner-Description" placeholder="Enter Description"></textarea>
+                      </div>
+                      <div class="form-group">
                         <label for="owner-Price">Price</label>
                         <input type="text" id="owner-Price" class="form-control" aria-describedby="owner-Price" placeholder="Enter Monthly Price">
                       </div>
