--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -9,7 +9,7 @@
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+<!--  helo-->
   <!-- Custom fonts for this template -->
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
@@ -17,6 +17,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/landing-page.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
 
 </head>
 <body>
@@ -47,19 +48,19 @@
                   <div class="col-8 offset-2">
                     <form class="clearfix mb-4" action="POST">
                       <div class="form-group">
-                        <label for="owner-Name">Name</label>
+                        <label  class="owner-form-text" for="owner-Name">Name</label>
                         <input type="text" id="owner-Name" class="form-control" aria-describedby="owner-Name" placeholder="Enter Your Name">
                       </div>
                       <div class="form-group">
-                        <label for="owner-Address">Address</label>
+                        <label class="owner-form-text" for="owner-Address">Address</label>
                         <input type="text" id="owner-Address" class="form-control" aria-describedby="owner-Address" placeholder="Enter Address">
                       </div>
                       <div class="form-group">
-                        <label for="owner-Description">Description</label>
-                        <textarea rows="3" id="owner-Description" class="form-control" aria-describedby="owner-Description" placeholder="Enter Description"></textarea>
+                        <label class="owner-form-text" for="owner-Description">Description</label>
+                        <textarea rows="3" id="owner-Description" class="form-controlg" aria-describedby="owner-Description" placeholder="Enter Description"></textarea>
                       </div>
                       <div class="form-group">
-                        <label for="owner-Price">Price</label>
+                        <label class="owner-form-text" for="owner-Price">Price</label>
                         <input type="text" id="owner-Price" class="form-control" aria-describedby="owner-Price" placeholder="Enter Monthly Price">
                       </div>
 
