--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -57,7 +57,7 @@
                       </div>
                       <div class="form-group">
                         <label class="owner-form-text" for="owner-Description">Description</label>
-                        <textarea rows="3" id="owner-Description" class="form-controlg" aria-describedby="owner-Description" placeholder="Enter Description"></textarea>
+                        <textarea rows="3" id="owner-Description" class="form-control" aria-describedby="owner-Description" placeholder="Enter Description"></textarea>
                       </div>
                       <div class="form-group">
                         <label class="owner-form-text" for="owner-Price">Price</label>
