--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -35,9 +35,20 @@
     </nav>
     <!-- Masthead -->
     <header class="masthead text-white text-center">
-       <div class="container">
-            
-            </div>
+        <div class="container">
+            <!-- This area should show the results from the database owner_db -->
+            <ul>
+                {{#each owner_db}}
+                <li>
+                    <p>
+                        {{this.name}}| {{this.address}} | {{this.price}} | {{this.availability}}
+
+                        <!--<button data-movieid="{{this.id}}" class="delmovie">Delete</button> -->
+                    </p>
+                </li>
+                {{/each}}
+            </ul>
+        </div>
         </div>
     </header>
     <!-- Footer -->
