--- a/views/find.handlebars
+++ b/views/find.handlebars
@@ -23,11 +23,11 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
       <ul class="navbar-left">
-      <a class="navbar-brand" href="/">Start Bootstrap</a>
+      <a class="navbar-brand" href="/">Super Parking</a>
       </ul>
       <ul class="navbar-right">
-        <a class="navbar-brand" href="/find"></span>Find Parking</a>
-        <a class="navbar-brand" href="/owner"></span>Post Parking</a>
+        <a class="navbar-brand" href="/"></span>Find Parking</a>
+        <a class="navbar-brand" href="/post"></span>Post Parking</a>
       <a class="btn btn-primary" href="#"></span>Sign In</a>
       </ul>
   </nav>
