--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -27,8 +27,8 @@
       <a class="navbar-brand" href="/">Start Bootstrap</a>
       </ul>
       <ul class="navbar-right">
-        <a class="navbar-brand" href="/find"></span>Find Parking</a>
-        <a class="navbar-brand" href="/owner"></span>Post Parking</a>
+        <a class="navbar-brand" href="/"></span>Find Parking</a>
+        <a class="navbar-brand" href="/post"></span>Post Parking</a>
       <a class="btn btn-primary" href="#"></span>Sign In</a>
       </ul>
   </nav>
@@ -67,15 +67,6 @@
 
                       <button id="submit" class="btn btn-primary float-right">Submit</button>
                     </form>
-                    <!-- <h3>Owners:</h3>
-                    <ul id="owner-list" class="list-group">
-                      {{#each owners}}
-                      <li data-id="{{this.ID}}" class="list-group-item">
-                        <a href="owner/{{this.ID}}">{{this.Address}}</a>
-                        <button class="btn btn-danger float-right delete">ｘ</button>
-                      </li>
-                      {{/each}}
-                    </ul> -->
                   </div>
                 </div>
               </div>
