--- a/views/example.handlebars
+++ b/views/example.handlebars
@@ -13,17 +13,18 @@
   <!-- Custom fonts for this template -->
   <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
-  <link href="/https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
   <!-- Custom styles for this template -->
   <link href="/css/landing-page.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 </head>
 <body>
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
       <ul class="navbar-left">
-      <a class="navbar-brand" href="/">Start Bootstrap</a>
+      <a class="navbar-brand" href="/">Super Parking</a>
       </ul>
       <ul class="navbar-right">
       <a class="navbar-brand" href="/find"></span>Find Parking</a>
@@ -51,20 +52,30 @@
                 <button type="submit" class="btn btn-block btn-lg btn-primary"><i class="fa fa-search" style="font-size:24px"></i></button>
                 <br>
               </div>
+              <div class ="w3-container">
+              <h3>Parking Spots:</h3>
+           <ul id="example-list" class="resultslist w3-ul w3-black list-group">
+             {{#each owner}}
+             <li data-id="{{this.id}}" class="resultslist w3-ul w3-black list-group-item">
+               <a href="example/{{this.id}}">{{this.Address}} for {{this.Price}}$ a month</a>
+             </li>
+             {{/each}}
+           </ul>
+           </div>
               </div>
             </div>
           </form>
      </div>
    </div>
-   <h3>Results:</h3>
-<ul id="example-list" class="list-group">
-  {{#each owner}}
-  <li data-id="{{this.id}}" class="list-group-item">
-    <a href="example/{{this.Name}}">{{this.Address}}</a>
-    <button class="btn btn-danger float-right delete">ｘ</button>
-  </li>
-  {{/each}}
-</ul>
+   <!-- <div class="w3-container">
+     <h2>Colored List</h2>
+     <p>Use any w3-color class to add a color to the list:</p>
+     <ul class="w3-ul w3-red">
+       <li>Jill</li>
+       <li>Eve</li>
+       <li>Adam</li>
+     </ul>
+   </div> -->
  </div>
 </div>
         </div>
