--- a/views/confirm.handlebars
+++ b/views/confirm.handlebars
@@ -9,7 +9,7 @@
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<!--  helo-->
+  <!--  helo-->
   <!-- Custom fonts for this template -->
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
@@ -20,66 +20,38 @@
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
 
 </head>
+
 <body>
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
-      <ul class="navbar-left">
-      <a class="navbar-brand" href="/">Start Bootstrap</a>
-      </ul>
-      <ul class="navbar-right">
-        <a class="navbar-brand" href="/"></span>Find Parking</a>
-        <a class="navbar-brand" href="/post"></span>Post Parking</a>
-      <a class="btn btn-primary" href="#"></span>Sign In</a>
-      </ul>
+    <ul class="navbar-left">
+      <a class="navbar-brand" href="/">Home</a>
+    </ul>
+    <ul class="navbar-right">
+      <a class="navbar-brand" href="/find">
+        </span>Find Parking</a>
+      <a class="navbar-brand" href="/owner">
+        </span>Post Parking</a>
+      <a class="btn btn-primary" href="#">
+        </span>Sign In</a>
+    </ul>
   </nav>
   <!-- Masthead -->
   <header class="masthead text-white text-center">
     <div class="container">
-      <div id= "Row_1" class="row">
-         <div class="col-l- mx-auto">
-           <br>
-            <h1 id="find" class="mb-3">Post your perfect parking space</h1>
+      <div id="Row_1" class="row">
+        <div class="col-l- mx-auto">
+          <br>
+          <h1 id="find" class="mb-3">Thanks for posting your space!</h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div id="home">
-              <div class="container">
-                <div class="row">
-                  <div class="col-8 offset-2">
-                    <form class="clearfix mb-4" action="POST">
-                      <div class="form-group">
-                        <label  class="owner-form-text" for="owner-Name">Name</label>
-                        <input type="text" id="owner-Name" class="form-control" aria-describedby="owner-Name" placeholder="Enter Your Name">
-                      </div>
-                      <div class="form-group">
-                        <label  class="owner-form-text" for="owner-Telephone">Telephone</label>
-                        <input type="text" id="owner-Telephone" class="form-control" aria-describedby="owner-Telephone" placeholder="Enter Your Telephone">
-                      </div>
-                      <div class="form-group">
-                        <label class="owner-form-text" for="owner-Address">Address</label>
-                        <input type="text" id="owner-Address" class="form-control" aria-describedby="owner-Address" placeholder="Enter Address">
-                      </div>
-                      <div class="form-group">
-                        <label class="owner-form-text" for="owner-City">City</label>
-                        <input type="text" id="owner-City" class="form-control" aria-describedby="owner-City" placeholder="Enter City">
-                      </div>
-                      <div class="form-group">
-                        <label class="owner-form-text" for="owner-Description">Description</label>
-                        <textarea rows="3" id="owner-Description" class="form-control" aria-describedby="owner-Description" placeholder="Enter Description"></textarea>
-                      </div>
-                      <div class="form-group">
-                        <label class="owner-form-text" for="owner-Price">Price</label>
-                        <input type="text" id="owner-Price" class="form-control" aria-describedby="owner-Price" placeholder="Enter Monthly Price">
-                      </div>
 
+          <p>Here is all the information you need about your spot:</p>
 
-                      <button id="submit" class="btn btn-primary float-right">Submit</button>
-                    </form>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </form>
+          <p>You will receive a confirmation email stating that we have received your inquiery to put your spot for rent and
+            will receive another email once we have verified and approved the posting</p>
+          <p>Further instructions on things such as how to enter payment method will be included in your Welcome email.</p>
+
         </div>
       </div>
     </div>
