--- a/views/confirm.handlebars
+++ b/views/confirm.handlebars
@@ -30,7 +30,7 @@
     <ul class="navbar-right">
       <a class="navbar-brand" href="/find">
         </span>Find Parking</a>
-      <a class="navbar-brand" href="/owner">
+      <a class="navbar-brand" href="/post">
         </span>Post Parking</a>
       <a class="btn btn-primary" href="#">
         </span>Sign In</a>
